creating consistent gmt-web page links

--- a/gmt-web/common.yml
+++ b/gmt-web/common.yml
@@ -3,12 +3,10 @@ layout: sub
 menu: 
     - text: Overview
       href: index.html
+    - text: Documentation
+      href: documentation.html
     - text: Install
       href: install.html
-    - text: Example Pipeline
-      href: example_pipeline.html
-    - text: Full Instructions
-      href: breakdancer.html
 
 module_details:
     name: 'BreakDancer'
