class to represent a region. needs tests. seems to compile and create ok

--- a/src/lib/breakdancer/CMakeLists.txt
+++ b/src/lib/breakdancer/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCES
     AlnParser.cpp
     AlnParser.h
     samtools.h
+    Region.hpp
+    Region.cpp
 )
 
 add_library(breakdancer ${SOURCES})
