basic skeleton of read class. no tests. still needs code to set BD flag

--- a/src/lib/breakdancer/CMakeLists.txt
+++ b/src/lib/breakdancer/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SOURCES
     BamReader.hpp
     LegacyBamReader.cpp
     LegacyBamReader.hpp
+    Read.cpp
+    Read.hpp
     Region.cpp
     Region.hpp
     samtools.h
