some test code for flag parsing inside its own classes

--- a/src/lib/breakdancer/CMakeLists.txt
+++ b/src/lib/breakdancer/CMakeLists.txt
@@ -14,7 +14,10 @@ set(SOURCES
     BasicRegion.hpp
     BreakDancer.cpp
     BreakDancer.hpp
+    FlagCodec.hpp
     IBamReader.hpp
+    IlluminaLIFlagCodec.hpp
+    IlluminaStandardFlagCodec.hpp
     LibraryInfo.hpp
     Options.cpp
     Options.hpp
